<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.doubleslash.ga</groupId>
	<artifactId>GoogleAnalyticsApp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<finalName>gawebsite</finalName>
					<outputDirectory>bin</outputDirectory>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>de.doubleslash.ga.MainApp</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>attached</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.apis</groupId>
			<artifactId>google-api-services-analytics</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.oauth-client</groupId>
			<artifactId>google-oauth-client</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.oauth-client</groupId>
			<artifactId>google-oauth-client-java6</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.oauth-client</groupId>
			<artifactId>google-oauth-client-jetty</artifactId>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.api-client</groupId>
				<artifactId>google-api-client</artifactId>
				<version>1.21.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.apis</groupId>
				<artifactId>google-api-services-analytics</artifactId>
				<version>v3-rev123-1.21.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.oauth-client</groupId>
				<artifactId>google-oauth-client</artifactId>
				<version>1.21.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.oauth-client</groupId>
				<artifactId>google-oauth-client-java6</artifactId>
				<version>1.21.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.oauth-client</groupId>
				<artifactId>google-oauth-client-jetty</artifactId>
				<version>1.21.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<name>GoogleAnalyticsMonitor</name>
	<organization>
		<name>doubleSlash Net-Business GmbH</name>
		<url>www.doubleslash.de</url>
	</organization>
</project>